upgrade README about the new generating method